assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;500;600;700&family=Roboto:ital,wght@1,300&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "JetBrains Mono", monospace;
  cursor: default;
}

:root {
  --white: #ffffff;

  --gray-10: #fdfdfd;
  --gray-50: #f5f5f5;
  --gray-90: #ececec;
  --gray-95: #eaeaea;
  --gray-100: #e9e9e9;
  --gray-110: #dcdcdc;
  --gray-150: #c9c9c9;
  --gray-250: #bfbfbf;
  --gray-400: #414141;
  --gray-810: #282828;

  --cyan-700: #0f8d95;
}

@media (max-width: 1080px) {
  html {
    font-size: 93.75%;
  }
}

@media (max-width: 720px) {
  html {
    font-size: 87.5%;
  }
}

body {
  background: var(--gray-50);
  color: var(--gray-810);
}

body,
input,
textarea,
select,
button {
  font: 400 1rem "JetBrains Mono", monospace;
}

button {
  cursor: pointer;
}

a {
  color: inherit;
  text-decoration: none;
  cursor: pointer;
}

a img {
  cursor: pointer;
  border-radius: 4px;
}

a img:hover {
  transform: translateY(-3px);
}

a img:active {
  transform: translateY(0px);
}

ul {
  margin-left: 26px;
}

iframe {
  width: inherit;
  height: 100%;
  border-radius: 1rem;
}

::-webkit-scrollbar {
  width: 14px;
  height: 0px;
}
::-webkit-scrollbar-thumb {
  background: rgb(219, 219, 219);
  border-radius: 10px;
  border: 2px solid rgb(241, 241, 241);
}
::-webkit-scrollbar-track {
  background: rgb(241, 241, 241);
  border-radius: 10px;
  border: 1px solid rgb(241, 241, 241);
}

/* Início dos estilos */
.top-bar {
  width: 100%;
  height: 2rem;
  background: var(--gray-110);
  border-bottom: 1px solid var(--gray-250);
  margin-bottom: 2rem;
}

.footer-bar {
  width: 100%;
  height: 4rem;
  background: var(--gray-110);
  border-top: 1px solid var(--gray-250);
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0px -8px 20px 0px #00000014;
  text-align: center;
}

.wrapper {
  width: 100%;
  max-width: 980px;
  margin: 0 auto;
  padding: 2rem 2rem;
}

.access-github {
  text-align: center;
  padding: 0rem 1.5rem 3rem 1.5rem;
}

.access-github p {
  font-size: 1.8rem;
}

.card {
  width: 100%;
  border: 1px solid var(--gray-150);
  border-radius: 1rem;
  background: var(--gray-10);
  box-shadow: 0px 6px 13px 3px #00000012;
}

.title {
  font-weight: 700;
  font-size: 1.4rem;
  margin-bottom: 1rem;
}

.description {
  font-weight: 300;
  font-size: 1.1rem;
}

.link-custom {
  color: var(--cyan-700);
  box-shadow: inset 0px -1px 0px 0px var(--cyan-700);
}

.link-custom:hover {
  box-shadow: inset 0px -4px 0px 0px var(--cyan-700);
}

/* Tag Base styles */
.tag {
  width: fit-content;
  height: 1.8rem;
  background: var(--gray-90);
  border: 1px solid var(--gray-110);
  border-radius: 5rem;
  padding: 0 0.7rem;
  display: flex;
  align-items: center;
  cursor: default;
}

.tag .tag-icon {
  height: 1.8rem;
  margin: 0 0.5rem 0 -0.7rem;
  background: var(--gray-400);
  padding: 0.4rem;
  border-radius: 5rem;
}

.tag .tag-icon img {
  width: 16px;
  height: 16px;
}

.tag .tag-name {
  font-family: "Roboto", sans-serif;
}

/* Top Card styles */

.about-card .top-infos {
  margin: 2rem 2rem 2rem 0;
  position: relative;
}

.about-card .top-infos .bg-name {
  background: var(--gray-100);
  padding: 1rem 1.7rem;
  width: calc(100% - 30px)
    /* width 90% para tirar detalhe do canto superior direito da imagem */;
}

.about-card .top-infos .bg-name p {
  font-size: 2rem;
  font-weight: 700;
}

.about-card .top-infos .bg-occupation {
  background: var(--gray-110);
  padding: 0.5rem 1.7rem;
  font-weight: 500;
}

.about-card .top-infos .bg-occupation p {
  font-size: 1rem;
}

.about-card .top-infos .avatar {
  position: absolute;
  top: 0;
  right: 0;
}

.about-card .top-infos .avatar img {
  width: 14rem;
  border-radius: 0.5rem 1.2rem 1.2rem 1.2rem;
  background-color: #414141;
}

.about-card .top-infos .tags {
  width: calc(100% - 220px);
  padding: 2rem 0rem 2rem 1.7rem;
  display: flex;
  flex-wrap: wrap;
  gap: 0.3rem;
}

.about-card .top-infos .contact-badges {
  padding: 0rem 0rem 0rem 1.7rem;
}

.about-card .top-infos .about-content {
  margin: 2rem 0rem 3rem 1.7rem;
  font-size: 1.2rem;
}

.about-card .top-infos .about-bottom-content {
  display: flex;
  justify-content: space-between;
  margin: 2rem 0.5rem 3rem 1.7rem;
}

/* Section divider */
.divider {
  width: 100%;
  background: var(--gray-110);
  margin: 2rem 0rem;
  padding: 1rem;
  border: 1px solid var(--gray-150);
  border-radius: 1rem;
  text-align: center;
  box-shadow: 0px 6px 13px 3px #00000012;
}

.divider p {
  font-size: 1.7rem;
  font-weight: 700;
}

/* Project Wrapper */

.project-wrapper {
  display: grid;
  grid-template-columns: 1.3fr 2fr;
  gap: 0.5rem;
  margin: 2rem 0rem;
  min-height: 580px;
}

/* Project Card styles */

.project-wrapper .project-card {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.project-wrapper .access-site-button {
  border: none;
  backdrop-filter: blur(4px);
  background: rgba(222, 222, 222, 0.8);
  position: absolute;
  width: 100%;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem 1rem;
  border-radius: 0rem 0rem 1rem 1rem;
  transition: background 0.2s;
}

.project-wrapper .access-site-button:hover {
  background: rgba(200, 200, 200, 0.8);
}

.project-wrapper .access-site-button img {
  margin-right: 0.5rem;
}

.project-wrapper .project-card .preview-image {
  padding: 2rem;
  width: 90%;
}

.project-wrapper .project-card .bottom-icon {
  position: absolute;
  right: 0;
  bottom: 0;
  background: var(--gray-150);
  padding: 0.4rem 1.5rem 0.1rem 2rem;
  border-radius: 3rem 0rem 0.9rem 0rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
}

.project-wrapper .project-card .bottom-icon p {
  color: var(--white);
}

.project-wrapper .project-card .bottom-icon img {
  width: 14px;
  height: 14px;
}

.project-wrapper .about-project-card {
  position: relative;
}

.project-wrapper .about-project-card .year-top {
  background: var(--gray-90);
  width: 40%;
  margin: 0 auto;
  text-align: center;
  padding: 0.2rem;
  border-radius: 0rem 0rem 2rem 2rem;
}

.project-wrapper .about-project-card .year-top p {
  font-size: 0.8rem;
  font-weight: 700;
}

.project-wrapper .about-project-card .project-title {
  width: 96%;
  background: var(--gray-110);
  margin: 1rem 0rem;
  padding: 1rem 1.7rem;
  border-radius: 0rem 10rem 10rem 0rem;
}

.project-wrapper .about-project-card .project-title p {
  font-size: 1.8rem;
}

.project-wrapper .about-project-card .tags {
  display: flex;
  flex-wrap: wrap;
  gap: 0.3rem;
  padding: 0.5rem 1.7rem;
}

.project-wrapper .about-project-card .project-description {
  padding: 1rem 1.7rem 3rem 1.7rem;
  font-weight: 300;
}

.project-wrapper .about-project-card .bottom-access-icons {
  position: absolute;
  right: 0;
  bottom: 0;
  background: var(--gray-150);
  padding: 0.4rem 1.5rem 0.1rem 2rem;
  border-radius: 3rem 0rem 1.4rem 0rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
}

.project-wrapper .about-project-card .bottom-access-icons a:hover {
  transform: translateY(-3px);
}

.project-wrapper .about-project-card .bottom-access-icons a img {
  width: 14px;
  height: 14px;
}

/* Media queries */

@media (max-width: 720px) {
  .top-bar {
    margin-bottom: 0rem;
  }
  .project-wrapper {
    display: grid;
    grid-template-columns: 1fr;
  }
  .project-wrapper .project-card .preview-image {
    width: fit-content;
  }
  .project-wrapper .project-card {
    min-height: 400px;
  }
  .about-card .top-infos .about-bottom-content {
    flex-direction: column;
    gap: 3rem;
  }
  .about-card .top-infos .bg-name p {
    width: calc(100% - 90px);
  }
  .about-card .top-infos .bg-occupation {
    border-radius: 0rem 0rem 1rem 0rem;
  }
  .about-card .top-infos .bg-occupation p {
    width: calc(100% - 120px);
  }
  .about-card .top-infos .avatar img {
    width: 9rem;
  }
  .about-card .top-infos .tags {
    width: 100%;
  }
}

@media (max-width: 400px) {
  .wrapper {
    padding: 0.7rem 0.7rem;
  }
  .project-wrapper .project-card .preview-image {
    width: inherit;
  }
}

